Make: changed layout by introducing view-containers

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.view-container{
+    @apply w-[800px] mx-auto 
+}
+
+.nav-item{
+    @apply cursor-pointer hover:text-slate-900
+}
+
+.view-containers{
+    @apply my-[120px] 
+}
+.item-heading{
+    @apply font-bold text-2xl
+}
