--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,14 @@
 }
 
 .view-containers{
-    @apply my-[120px] 
+    @apply my-[120px] flex
 }
 .item-heading{
-    @apply font-bold text-2xl
+    @apply font-semibold text-2xl
+}
+.grey-text{
+    @apply text-slate-500
+}
+.black-text{
+    @apply text-sm text-slate-700
 }
